# picocalc-wezterm

./: .gitignore  .gitmodules  .rgignore  Cargo.toml  LICENSE.md  Makefile  README-DEVICE.md  README.md  build.rs  getdeps.sh  memory.x  pico2w.x  pimoroni2w.x
.cargo/: config.toml
.github/workflows/: build.yml
src/: config.rs  fixed_str.rs  heap.rs  keyboard.rs  logging.rs  main.rs  net.rs  process.rs  psram.rs  rng.rs  screen.rs  storage.rs  time.rs
