[package]
name = "picocalc-wezterm"
version = "0.1.0"
edition = "2024"

[dependencies]
# panic-probe = { version = "*" }
bitflags = { version="2.9.0", default-features=false }
cortex-m-rt = { version = "*" }
crc = "3.2.1"
critical-section = "1.2.0"
cyw43 = { version = "*", features = [ "firmware-logs" ] }
cyw43-pio = { version = "*" }
display-interface = "0.5.0"
embassy-embedded-hal = { version = "*" }
embassy-executor = { version = "*", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "nightly" ] }
embassy-futures = { version = "*" }
embassy-net = { version = "*", features = ["proto-ipv4", "tcp", "udp", "dhcpv4", "dns"] }
embassy-rp = { version = "*", features = [ "binary-info", "critical-section-impl", "unstable-pac", "time-driver", "rp235xa" ] }
embassy-sync = { version = "*" }
embassy-time = { version = "*" }
embassy-usb = { version = "*" }
embassy-usb-logger = { version = "*" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal-bus = "0.3.0"
embedded-nal-async = "0.8.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-sdmmc = "0.8"
fixed = { version = "*" }
fixed-macro = { version = "*" }
getrandom = { version="0.2", features=["custom"] }
heapless = "0.8"
humansize = {version="2.1.3", features=["no_alloc"]}
log = { version = "*" }
mipidsi = { git = "https://github.com/almindor/mipidsi.git" }
panic-persist = {version="0.3", features=["utf8"]}
postcard = {version="1.1.1", features=["embedded-io-06", "use-crc"]}
profont = "0.7.0"
rand_core = { version = "0.6", default-features = false }
rand_chacha = {version="0.3.0", default-features = false }
serde = { version = "*", default-features = false, features = [ "derive" ] }
serde-json-core = { version = "*" }
sntpc = { version = "0.5.2", default-features = false, features=["embassy-socket"] }
static_cell = { version = "*" }
sunset-embassy = {version="0.2", default-features = false, git = "https://github.com/wez/sunset.git", branch="elided"}
sunset = {version="0.2", default-features = false, git = "https://github.com/wez/sunset.git", branch="elided"}
chrono = { version = "0.4.40", default-features = false }
vtparse = { path = "../wezterm/vtparse", default-features = false, features = ["no_std"] }

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[profile.release]
debug = 2
lto = true
opt-level = "z"
incremental = false
codegen-units = 1

